--- a/index.html
+++ b/index.html
@@ -296,39 +296,7 @@
           </ol>
         </section>
 
-        <section>
-          <h2>Соотношение составов</h2>
-
-          <ol>
-            <li style="margin-bottom: 25px">
-              Сделки с целью причинения вреда (п. 2 ст. 61.2 Закона о банкротстве):
-              <ul style="margin-bottom: 5px">
-                <li><b>цель</b> причинения вреда (субъективный элемент);</li>
-                <li><b>вред;</b></li>
-                <li><b>знание</b> о цели причинения вреда (субъективный элемент).</li>
-              </ul>
-              Срок – 3 года
-            </li>
-            <li style="margin-bottom: 25px">
-              Сделки с неравноценностью (п. 1 ст. 61.2 Закона о банкротстве):
-              <ul style="margin-bottom: 5px">
-                <li><b>вред</b> – неравноценное встречное исполнение;</li>
-                <li><b>цель</b> и знание неопровержимо презюмируются.</li>
-              </ul>
-              Срок – 1 год
-            </li>
-            <li style="margin-bottom: 25px">
-              Сделки с предпочтением (ст. 61.3 Закона о банкротстве):
-              <ul style="margin-bottom: 5px">
-                <li><b>вред</b> – преимущественное удовлетворение требований 1 кредитора;</li>
-                <li><b>цель</b> и знание неопровержимо презюмируются.</li>
-              </ul>
-              Срок – до 1 месяца (только вред) и от 1 до 6 (вред и недобросовестность)
-            </li>
-          </ol>
-        </section>
-
-        <section>
+       <section>
           <h2>Сделки с предпочтением</h2>
 
           <p>
@@ -378,6 +346,38 @@
           <div class="center">
             <img src="images/graph2.png" />
           </div>
+        </section>
+
+         <section>
+          <h2>Соотношение составов</h2>
+
+          <ol>
+            <li style="margin-bottom: 25px">
+              Сделки с целью причинения вреда (п. 2 ст. 61.2 Закона о банкротстве):
+              <ul style="margin-bottom: 5px">
+                <li><b>цель</b> причинения вреда (субъективный элемент);</li>
+                <li><b>вред;</b></li>
+                <li><b>знание</b> о цели причинения вреда (субъективный элемент).</li>
+              </ul>
+              Срок – 3 года
+            </li>
+            <li style="margin-bottom: 25px">
+              Сделки с неравноценностью (п. 1 ст. 61.2 Закона о банкротстве):
+              <ul style="margin-bottom: 5px">
+                <li><b>вред</b> – неравноценное встречное исполнение;</li>
+                <li><b>цель</b> и знание неопровержимо презюмируются.</li>
+              </ul>
+              Срок – 1 год
+            </li>
+            <li style="margin-bottom: 25px">
+              Сделки с предпочтением (ст. 61.3 Закона о банкротстве):
+              <ul style="margin-bottom: 5px">
+                <li><b>вред</b> – преимущественное удовлетворение требований 1 кредитора;</li>
+                <li><b>цель</b> и знание неопровержимо презюмируются.</li>
+              </ul>
+              Срок – до 1 месяца (только вред) и от 1 до 6 (вред и недобросовестность)
+            </li>
+          </ol>
         </section>
 
         <section>
@@ -445,6 +445,13 @@
 
         <section>
           <h2>Сделки с выборочным исполнением требований кредиторов банка.</h2>
+          <div class="center">
+            <img src="images/graph1.png" />
+          </div>
+        </section>
+
+        <section>
+          <h2>Сделки с выборочным исполнением требований кредиторов банка.</h2>
 
           <p><b>Основание оспаривания:</b> п. 1 ст. 61.3 Закона о банкротстве</p>
           <p><b>Порок сделки:</b> удовлетворение требований одного кредитора в льготном порядке</p>
@@ -463,6 +470,14 @@
             <img src="images/graph1.png" />
           </div>
         </section>
+
+        <section>
+          <h2>Сделки по погашению кредитов внутрибанковскими проводками.</h2>
+          <div class="center">
+            <img src="images/graph3.png" />
+          </div>
+        </section>
+
         <section>
           <h2>Сделки по погашению кредитов внутрибанковскими проводками.</h2>
 
@@ -486,6 +501,7 @@
             <img src="images/graph3.png" />
           </div>
         </section>
+
         <section>
           <h2>Сделки по выдаче денежных средств из кассы.</h2>
 
@@ -503,6 +519,14 @@
             <li>Наличие картотеки неисполненных платежных поручений иных клиентов.</li>
           </ul>
         </section>
+		
+        <section>
+          <h2>Сделки по расторжению обеспечительных сделок.</h2>
+          <div class="center">
+            <img src="images/graph4.png" />
+          </div>
+        </section>
+	
         <section>
           <h2>Сделки по расторжению обеспечительных сделок.</h2>
 
@@ -523,6 +547,23 @@
             <img src="images/graph4.png" />
           </div>
         </section>
+		
+        <section>
+          <h2>
+            Сделки по уступке права требования по ликвидным кредитам или отчуждению недвижимости при неравноценном
+            встречном исполнении.
+          </h2>
+          <p>
+            <b>Структура сделки:</b>
+          </p>
+          <ul>
+            <li>заключается договор купли-продажи недвижимости;</li>
+            <li>
+              оплата производится реальными денежными средствами по цене, существенно ниже рыночной (процентов 50).
+            </li>
+          </ul>
+        </section>
+		
         <section>
           <h2>
             Сделки по уступке права требования по ликвидным кредитам или отчуждению недвижимости при неравноценном
@@ -551,6 +592,23 @@
             </li>
           </ul>
         </section>
+		
+        <section>
+          <h2>
+            Сделки по уступке права требования по ликвидным кредитам или отчуждению недвижимости (ценных бумаг) (с
+            оплатой внутрибанковскими проводками).
+          </h2>
+          <p>
+            <b>Структура сделки:</b>
+          </p>
+          <ul>
+            <li>
+              заключается договор об уступке права требования по ликвидным обязательствам (купля-продажа недвижимости);
+            </li>
+            <li>оплата производится внутрибанковской проводкой.</li>
+          </ul>
+        </section>
+	
         <section>
           <h2>
             Сделки по уступке права требования по ликвидным кредитам или отчуждению недвижимости (ценных бумаг) (с
@@ -597,6 +655,15 @@
             </tbody>
           </table>
         </section>
+		
+        <section>
+          <h2>Выплаты «золотых парашютов».</h2>
+          <div class="center">
+            <img src="images/graph5.png" />
+          </div>
+        </section>
+
+
         <section>
           <h2>Выплаты «золотых парашютов».</h2>
 
@@ -632,6 +699,19 @@
             <img src="images/graph5.png" />
           </div>
         </section>
+
+        <section>
+          <h2>Сделки по переводу долга.</h2>
+
+          <p>
+            <b>Структура сделки:</b>
+          </p>
+          <ul>
+            <li>Выдача кредита платежеспособному лицу.</li>
+            <li>Перевод долга такого лица на техническую компанию.</li>
+          </ul>
+        </section>
+
         <section>
           <h2>Сделки по переводу долга.</h2>
 
@@ -653,6 +733,37 @@
             <li>неравноценное встречное исполнение</li>
           </ol>
         </section>
+
+        <section>
+          <h2>Сделки по рефинансированию задолженности.</h2>
+
+          <div class="columns">
+            <div>
+              <p>
+                <b>Структура сделки:</b>
+              </p>
+              <ul>
+                <li>
+                  Банк выдает кредит 1 лицу с заключением обеспечительной сделки в отношении дорогостоящего имущества.
+                </li>
+                <li>
+                  Через некоторое время Банк выдает другому лицу еще 1 кредит, лицо, как правило техническое, без
+                  обеспечения.
+                </li>
+                <li>
+                  Денежные средства по кредитному договору 2 лица цепочкой последовательных сделок перечисляются на счет
+                  первого лица, который ими гасит кредит.
+                </li>
+                <li>
+                  В результате сделок обязательство по кредитному договору прекращается надлежащим исполнением, Банк как
+                  залогодержатель теряет право в отношении заложенного имущества.
+                </li>
+              </ul>
+            </div>
+            <img src="images/graph6.png" />
+          </div>
+        </section>
+
         <section>
           <h2>Сделки по рефинансированию задолженности.</h2>
 
@@ -694,6 +805,28 @@
             <img src="images/graph6.png" />
           </div>
         </section>
+
+        <section>
+          <h2>Сделки по «дроблению вкладов».</h2>
+
+          <div class="columns">
+            <div>
+              <p>
+                <b>Структура сделок:</b>
+              </p>
+              <ul>
+                <li>Имеется остаток на счете юридического лица</li>
+                <li>Совершается операция по снятию денежных средств.</li>
+                <li>
+                  Затем во вклады подставных физических лиц вносится по 1,4 млн рублей, как правило в нарушение запрета
+                  ЦБ РФ на привлечение вкладов физических лиц.
+                </li>
+              </ul>
+            </div>
+            <img src="images/graph7.png" />
+          </div>
+        </section>
+
         <section>
           <h2>Сделки по «дроблению вкладов».</h2>
 
@@ -719,6 +852,7 @@
             <img src="images/graph7.png" />
           </div>
         </section>
+
         <section>
           <h2>Гражданско-правовая ответственность контролирующих Банк лиц.</h2>
           <h4>Лица, имеющие право на подачу такого заявления:</h4>
