--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
         <section>
           <h2>Статистические сведения.</h2>
           <p>
-            По данным ЦБ РФ на 01.01.2010 зарегистрировано 1 178 кредитных организаций, на 25.06.2021 среди действующих
-            числится 379 кредитных организаций.
+            По данным ЦБ РФ на 01.01.2010 зарегистрировано 1 178 кредитных организаций, на 01.11.2021 среди действующих
+            числится 372 кредитных организаций.
           </p>
           <table>
             <thead>
@@ -198,7 +198,7 @@
             </li>
             <li>
               Кредитор имеет право заявить возражения по результатам рассмотрения требований конкурсным управляющим в
-              арбитражный суд в течение 15 календарных дней с момента получения уведомления Агентства о результатах
+              арбитражный суд в течение 10 календарных дней с момента получения уведомления Агентства о результатах
               рассмотрения требования.
             </li>
           </ol>
@@ -952,6 +952,18 @@
                 </li>
               </ul>
             </li>
+          </ol>
+        </section>
+        <section>
+          <h2>Дело Банка «БАЛТИКА»</h2>
+          <ol>
+            <li>
+              Наличие у ответчика возможности оказывать существенное влияние на деятельность должника.
+            </li>
+            <li>
+              Реализация ответчиком соответствующих полномочий привела к негативным для должника и его кредиторам последствиям, масштаб негативных последствий соотносится с масштабом деятельности должника.
+            </li>
+            <li>Ответчик является инициатором такого поведения и (или) потенциальным выгодоприобретателем возникших в связи с этим негативных последствий.</li>
           </ol>
         </section>
       </div>
